--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <a target="_blank"
-                    href="https://drive.google.com/file/d/1G2AGxFVknI2ewQy8e0WRH7PGjvwOnYWn/view?usp=sharing"
+                    href=""
                     class="btn">download CV</a>
             </div>
         </div>
@@ -229,7 +229,7 @@
     <!-- contact section ends -->
 
     <!-- footer section starts -->
-    <div class="footer"> created by ❤️ <a href="https://www.linkedin.com/in/nand-kishore-809880172">NAND KISHORE</a> |
+    <div class="footer"> created by ❤️ <a href="">Kunal Raj</a> |
         all
         rights are reserved</div>
     <!-- footer section ends -->
